Fixed the css so that design does not break on smaller screens

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,6 +2,37 @@ body {
   background: #e9f0f4;
   font-family: 'Asap', sans-serif;
 }
+
+input {
+  border: 1px solid rgba(0,0,0,0.2);
+}
+.title {
+  height: 55px;
+  background: #2e3641;
+  color: white;
+  font-size: 2.5rem;
+  padding-top: 1rem;
+  padding-left: 2.3rem;
+  padding-bottom: 1rem;
+}
+.subtext {
+  color: #9eb2c0;
+  font-size: 1.4rem;
+  padding-left: 2rem;
+  padding-top: 2rem;
+}
+.button {
+  height: 4rem;
+  width: 100%;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  color: white;
+  font-size: 1.3rem;
+  margin-top: 20px;
+  border: none;
+  text-transform: uppercase;
+  background: #c1cfd9;
+}
 #new-post {
   margin-top: 5rem;
   background: #fff;
@@ -22,7 +53,7 @@ body {
 #new-post #sidebar #message {
   margin-bottom: 18rem;
 }
-#new-post #sidebar #doc{
+#new-post #sidebar #doc {
   background: #fff;
 }
 #new-post #main {
@@ -32,14 +63,6 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-}
-@media (max-width:1200px) and (min-width:990px) { 
-  #new-post #main {
-    padding-left: 3%;
-  }
-  #new-post #main #content {
-    padding-right: 0;
-  }
 }
 #new-post #main h2 {
   padding: 0;
@@ -70,7 +93,6 @@ body {
 #new-post #main input:-moz-placeholder { /* Firefox 18- */
   color: #e2eaef;
 }
-
 #new-post #main #content {
   margin-top: 2rem;
   display: flex;
@@ -78,8 +100,6 @@ body {
   background: #2e3641;
   padding-right: 6.5%;
 }
-
-
 #new-post #main #content img {
   width: auto;
   padding-top: 1rem;
@@ -88,47 +108,28 @@ body {
   padding-right: 1.5rem;
   border-right: 1px solid rgba(255,255,255,0.1);
 }
-
-
 #new-post #main #post {
   height: 34rem;
   width: 100%;
   resize: none;
+  border: 1px solid rgba(0,0,0,0.2) 
 }
-
 #new-post #main #post:focus {
   outline: none;
 }
-
 #new-post #main #buttons {
   display: flex;
   flex-direction: row;
 }
-.button {
-  height: 4rem;
-  width: 100%;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  color: white;
-  font-size: 1.3rem;
-  margin-top: 20px;
-  border: none;
-  text-transform: uppercase;
-  background: #c1cfd9;
-}
-
 #new-post #main #buttons #save {
   margin-right: 5%;
 }
-
 #new-post #main #buttons #preview {
   margin-right: 5%;
 }
-
 #new-post #main #buttons #publish {
   background: #f97e76;
 }
-
 #nav-search {
   margin-top: 6rem;
   margin-bottom: 6rem;
@@ -136,25 +137,21 @@ body {
   display: flex;
   flex-direction: row;
 }
-
 #nav-search img {
   padding: 30px;
   width: auto;
   height: auto;
   border-right: 1px solid rgba(255,255,255,0.1);
 }
-
 #nav-search #nav-message, #nav-search #heart {
   padding: 32.5px;
 }
-
 #nav-search #input {
   padding-top: 30px;
   width: 100%;
   padding-right: 2.5rem;
   padding-left: 2.5rem;
 }
-
 #nav-search input {
   background: url(../images/magnifying.png) no-repeat left;
   background-color: #3d444e;
@@ -164,11 +161,9 @@ body {
   color: whitesmoke;
   border: 1px solid rgba(255,255,255,0.1);
 }
-
 #nav-search input:focus {
   outline: none;
 }
-
 #subscribe-box {
   width: 100%;
   height: 16rem;
@@ -177,24 +172,6 @@ body {
   flex-direction: column;
   background: white;
 }
-
-.title {
-  height: 55px;
-  background: #2e3641;
-  color: white;
-  font-size: 2.5rem;
-  padding-top: 1rem;
-  padding-left: 2.3rem;
-  padding-bottom: 1rem;
-}
-
-.subtext {
-  color: #9eb2c0;
-  font-size: 1.4rem;
-  padding-left: 2rem;
-  padding-top: 2rem;
-}
-
 #subscribe-box #form {
   display: flex;
   flex-direction: row;
@@ -202,14 +179,12 @@ body {
   padding-right: 2rem;
   padding-left: 2rem;
 }
-
 #subscribe-box #form input {
   padding: none;
   padding-left: 1rem;
   width: 100%;
   height: 35px;
 }
-
 #subscribe-box #form button {
   width: 30%;
   height: 35px;
@@ -220,33 +195,28 @@ body {
   border: none;
   color: white;
 }
-
 #related-box {
   width: 100%;
-  height: 390px;
   background: white;
   display: flex;
   flex-direction: column;
   margin-right: 5rem;
   margin-top: 5rem;
 }
-
 #related-box .post {
   height: 100%;
   padding-left: 20px;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
-
 #related-box .post .post-title {
   color: #f97e76;
   font-size: 1.7rem;
   padding-right: 50px;
 }
-
 #related-box .post .post-author {
   color: #d3dce0;
 }
-
 #tags-box {
   height: 16.5rem;
   background-color: white;
@@ -255,26 +225,22 @@ body {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
-
 #tags-box #tags-content {
   display: flex;
   flex-direction: row;
   padding: 2rem;
   padding-bottom: 0rem;
 }
-
 #tags-box input {
   width: 100%;
   height: 4rem;
   margin-right: 1rem;
 }
-
 #tags-box button {
   width: 25%;
   margin-top: 0;
   background-color: #f97e76;
 }
-
 #tags-box .subtext {
   margin: 0;
   font-size: 1.2rem;
@@ -311,7 +277,6 @@ body {
   flex-direction: row;
   padding: 2rem;
 }
-
 #map-box #map-content input {
   height: 4rem;
   width: 100%;
@@ -320,10 +285,78 @@ body {
   padding-left: 24px;
   border: 1px solid rgba(0,0,0,0.2);
 }
-
 #map-box #map-content button {
   width: 40%;
   margin-top: 0;
   background-color: #f97e76;
 }
 
+@media (max-width: 410px) {
+  #new-post #main #content img {
+    padding-top: 1rem;
+    padding-bottom: 1rem; 
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    border-right: 1px solid rgba(255,255,255,0.1);
+  }
+  #nav-search img {
+    padding: 5px;
+    width: 50%;
+  }
+  #nav-search #nav-message, #nav-search #heart {
+    padding: 7.5px;
+  }
+}
+
+@media (max-width: 530px) {
+  #new-post {
+    display: flex;
+    flex-direction: column;
+  }
+  #new-post #sidebar {
+    display: flex;
+    flex-direction: row;
+  }
+  #new-post #sidebar img {
+    width: 60%;
+    padding-top: 1.5rem;
+    padding-left: 6%;
+    padding-bottom: 1.5rem;
+    padding-right: 6%; 
+  }
+  #new-post #sidebar #message {
+    margin-bottom: 0rem;
+  }
+
+  #new-post #main #post {
+    height: 20rem;
+    width: 100%;
+    resize: none;
+    
+  }
+
+  #new-post #main .button {
+    margin-bottom: 1rem;
+  }
+
+  #nav-search img {
+    padding: 20px;
+  }
+
+  #nav-search #nav-message, #nav-search #heart {
+    padding: 22.5px;
+  }
+
+  #nav-search #input {
+    padding-top: 20px;
+  }
+}
+
+@media (max-width:1200px) and (min-width:990px) { 
+  #new-post #main {
+    padding-left: 3%;
+  }
+  #new-post #main #content {
+    padding-right: 0;
+  }
+}
